Menu items fixed and collapsable

--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,29 @@ a:visited {
     color: black;
 }
 
+.optionForm {
+    text-align: left;
+    padding: 10px 0px 10px 20px;
+}
+
+#submitButton {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    background-color: white;
+    color: black;
+}
+
+#submitButton:hover {
+    background-color: #2a2a2a;
+    color: white;
+}
+
+.collapsable {
+    display: none;
+}
+
 .itemSelect {
     background-color: white;
     color: black !important;
